--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/mydata?serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/mydata?serverTimezone=UTC&characterEncoding=UTF-8
     username: root
     password: root
   jpa:
